--- a/fpl/templates/formations.html
+++ b/fpl/templates/formations.html
@@ -58,6 +58,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>
 				</div>	
@@ -77,6 +78,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -95,6 +97,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -114,6 +117,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -137,6 +141,7 @@
 				<b><p> Transfer in:{{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out:{{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by:{{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			</div>
@@ -153,6 +158,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -168,6 +174,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -184,6 +191,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -208,6 +216,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>
 				</div>	
@@ -224,6 +233,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -239,6 +249,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -255,6 +266,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -277,6 +289,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>
 					</div>
@@ -293,6 +306,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -308,6 +322,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -324,6 +339,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -347,6 +363,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			</div>
@@ -363,6 +380,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -378,6 +396,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -394,6 +413,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -416,6 +436,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			</div>
@@ -432,6 +453,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -447,6 +469,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -463,6 +486,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -488,6 +512,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>
 				</div>
@@ -505,6 +530,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -520,6 +546,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
@@ -536,6 +563,7 @@
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p> Points per game: {{x['points_per_game']}}</p></b>
 				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
