--- a/fpl/templates/stats.html
+++ b/fpl/templates/stats.html
@@ -97,9 +97,9 @@ Ideally, You would want to pick Defenders and Goalkeepers from Teams with the lo
 	</div>
 
 	<div class="reference">
-		<p>The data was gotten from <a href="https://fbref.com/en/" target="_blank">FBREF</a></p>
-		<p id=overperforming>Green -> Players Outperforming their xG</p>
-		<p id=underperforming>Red -> Players Underperforming their xG</p>		
+		<p>The data was gotten from <a href="https://fbref.com/en/" target="_blank">FBREF</a> and <a href="https://understat.com/league/EPL" target="_blank">UNDERSTAT</a></p>
+		<p id=overperforming>Green -> Players Outperforming their xG or xA</p>
+		<p id=underperforming>Red -> Players Underperforming their xG or xA</p>		
 	</div>
 </div>
 {% endblock %}
