--- a/fpl/static/css/styles.css
+++ b/fpl/static/css/styles.css
@@ -548,7 +548,8 @@ h1,h2,h3,h4,h5,h6 {
 
 .line_padding{
     border: 1px solid black;
-    padding: 15px;
+    margin: 2px;
+   
 }
 #overperforming{
     color: greenyellow;
