--- a/fpl/static/css/styles.css
+++ b/fpl/static/css/styles.css
@@ -863,6 +863,10 @@ strong {
   font-weight: bold;
 }
 
+.home_stadium{
+    color: darkred;
+}
+
 /***************************Footer************************************/
 .footer-div{
     margin-top: 50px;
