--- a/fpl/templates/livescore.html
+++ b/fpl/templates/livescore.html
@@ -53,7 +53,13 @@
 				<div class="match-details">
 					<div class="match-date">
 						 <strong>{{livescore['Game_results'][x]['display_time']}}</strong>
+
 					</div>
+					<div class="match-date home_stadium">
+						 <strong>{{livescore['Game_results'][x]['home_stadium']}}</strong>
+
+					</div>
+
 					<div class="match-score">
 						{%if livescore['Game_results'][x]['team_h_score'] ==None%}
 						<span class="match-score-number match-score-number--leading">-</span>
