--- a/fpl/templates/index.html
+++ b/fpl/templates/index.html
@@ -37,6 +37,7 @@
 					<li><a href="{{url_for('formations')}}">Formation Drafts</a></li>
 					<li><a href="{{url_for('news')}}">News</a></li>
 					<li><a href="{{url_for('stats')}}">Stats</a></li>
+					<li><a href="{{url_for('manager_info')}}">Manager info</a></li>
 					<li><a href="{{url_for('help')}}">How It Works</a></li>
 					<li><a href="https://yemisi-portfolio.herokuapp.com/" target="_blank"  >Contact Me</a></li>
 					
