--- a/fpl/templates/manager_info.html
+++ b/fpl/templates/manager_info.html
@@ -14,13 +14,13 @@
 				<img src="../static/images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
 			</p>
 			<hr>
-         <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Name: {{m_info['player_name']}}</p>
-         <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>Team Name: {{m_info['team_name']}}</p>
-         <p><i class="fa fa-globe fa-fw w3-margin-right w3-text-theme"></i> Country: {{m_info['player_country']}}</p>
-         <p><i class="fa fa-arrow-up fa-fw w3-margin-right w3-text-theme"></i> Overall Points: {{m_info['overall_points']}}</p>
-         <p><i class="fa fa-list-ol fa-fw w3-margin-right w3-text-theme"></i> Overall Rank: {{m_info['overall_rank']}}</p>
-         <p><i class="fa fa-male fa-fw w3-margin-right w3-text-theme"></i> GW Rank: {{m_info['gw_rank']}}</p>
-         <p><i class="fa fa-bolt fa-fw w3-margin-right w3-text-theme"></i> GW Points: {{m_info['gw_points']}}</p>
+         <p class="each_data"><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Name: {{m_info['player_name']}}</p>
+         <p class="each_data"><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>Team Name: {{m_info['team_name']}}</p>
+         <p class="each_data" ><i class="fa fa-globe fa-fw w3-margin-right w3-text-theme"></i> Country: {{m_info['player_country']}}</p>
+         <p class="each_data" ><i class="fa fa-arrow-up fa-fw w3-margin-right w3-text-theme"></i> Overall Points: {{m_info['overall_points']}}</p>
+         <p class="each_data" ><i class="fa fa-list-ol fa-fw w3-margin-right w3-text-theme"></i> Overall Rank: {{m_info['overall_rank']}}</p>
+         <p class="each_data" ><i class="fa fa-male fa-fw w3-margin-right w3-text-theme"></i> GW Rank: {{m_info['gw_rank']}}</p>
+         <p class="each_data" ><i class="fa fa-bolt fa-fw w3-margin-right w3-text-theme"></i> GW Points: {{m_info['gw_points']}}</p>
 		</div>
 
 	 </div>
